Reparent duffelbag under upstream base

--- a/Resources/Prototypes/_NF/Entities/Clothing/Back/base_clothing_backpack.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Back/base_clothing_backpack.yml
@@ -16,7 +16,7 @@
 
 - type: entity
   abstract: true
-  parent: ClothingBackpack
+  parent: ClothingBackpackDuffel
   id: NFClothingDuffel
   components:
   - type: Storage
@@ -28,10 +28,6 @@
     size: Huge
     shape:
     - 0,0,7,5
-  - type: ClothingSpeedModifier
-    walkModifier: 1
-    sprintModifier: 0.9
-  - type: HeldSpeedModifier
 
 - type: entity
   abstract: true
