--- a/Resources/Prototypes/_NF/Entities/Mobs/Corpses/medical_corpse.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/Corpses/medical_corpse.yml
@@ -14,6 +14,9 @@
       rotation: 90
   - type: RandomHumanoidSpawner
     settings: MedicalBounty
+  - type: Tag
+    tags:
+    - MedicalBounty
 
 - type: entity
   id: SpawnRandomHumanoidCorpseMedicalBountyService
