--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1043,6 +1043,7 @@
       - BaseChemistryEmptyVial # Frontier
       - PowerCellSmall # Frontier
       - BlankMediPen # Frontier
+      - MedicalAppraisalTool # Frontier
     dynamicRecipes:
       - VialBluespace # Frontier
       - ChemicalPayload
