--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Crates/emergency_pod.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Crates/emergency_pod.yml
@@ -7,6 +7,7 @@
   components:
   - type: Transform
     noRot: true
+  - type: Anchorable
   - type: Icon
     sprite:  _NF/Structures/Storage/emergency_pod.rsi
     state: icon
@@ -34,7 +35,7 @@
         shape:
           !type:PhysShapeAabb
           bounds: "-0.4,-0.2,0.4,0.2"
-        density: 50
+        density: 400 # Heavy, same density as high value trading crate
         mask:
         - CrateMask # Match crate mask/layer
         layer:
@@ -46,12 +47,16 @@
     airtight: true
     itemCanStoreMobs: true
     air:
-      # ~1 atm of pure nitrogen at -10 C to prevent barotrauma
+      # ~1 atm of water vapor at -10 C to prevent barotrauma and give a funny "fwoosh" when opening
       volume: 200
       temperature: 263.15
       moles:
         - 0 # oxygen
-        - 10 # nitrogen
+        - 0 # nitrogen
+        - 0
+        - 0
+        - 0
+        - 10 # water vapor
     whitelist: # Frontier - whitelist
       components:
       - MedicalBounty
@@ -92,3 +97,6 @@
     price: 50 # Frontier: 75<50 - TODO: material value rework
   - type: RequireProjectileTarget
   - type: AntiRottingContainer
+  - type: Construction
+    graph: MedicalPod
+    node: medicalpod
