comment emergency pod construction graph

--- a/Resources/Prototypes/_NF/Recipes/Construction/Graphs/structures/emergency_pod.yml
+++ b/Resources/Prototypes/_NF/Recipes/Construction/Graphs/structures/emergency_pod.yml
@@ -7,9 +7,8 @@
         - to: medicalpod
           steps:
             - material: Steel
-              amount: 30
+              amount: 30 # Currently not possible to use, should be roughly as expensive as building a freezer
               doAfter: 5
-
 
     - node: medicalpod
       entity: MedicalPod
