Added glass under the diagonal walls, removed the shutters under the windows and worked on the mistakes

--- a/Resources/Prototypes/_NF/Shipyard/Scrap/aurorax.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Scrap/aurorax.yml
@@ -9,12 +9,14 @@
 - type: vessel
   id: AuroraX
   name: NC AuroraX
-  description: A medium-class ship with all the departments of a conventional Nanotrasen station, and also to provide other ships with everything they need. Recommended for a team of 4-8 people
+  description: A used medium-class ship with all the departments of a conventional Nanotrasen station, and also to provide other ships with everything they need. Recommended for a team of 4-8 people
   price: 122000
   category: Medium
-  group: Shipyard
-  shuttlePath: /Maps/_NF/Shuttles/aurorax.yml
+  group: Scrap
+  shuttlePath: /Maps/_NF/Shuttles/Scrap/aurorax.yml
+  guidebookPage: Null
   class:
+  - Scrapyard
   - Civilian
   engine:
   - Uranium
@@ -22,8 +24,8 @@
 
 - type: gameMap
   id: AuroraX
-  mapName: 'AuroraX'
-  mapPath: /Maps/_NF/Shuttles/aurorax.yml
+  mapName: 'NC AuroraX'
+  mapPath: /Maps/_NF/Shuttles/Scrap/aurorax.yml
   minPlayers: 0
   stations:
     AuroraX:
