--- a/Resources/Prototypes/holidays.yml
+++ b/Resources/Prototypes/holidays.yml
@@ -324,10 +324,10 @@
 - type: holiday
   id: Halloween
   name: holiday-name-halloween
-  beginDay: 27
+  beginDay: 27 # Frontier: 31<27
   beginMonth: October
-  endday: 2
-  endMonth: November
+  endday: 2 # Frontier
+  endMonth: November # Frontier
   greet:
     !type:Custom
     text: holiday-custom-halloween
@@ -426,7 +426,7 @@
 - type: holiday
   id: FestiveSeason
   name: holiday-name-festive-season
-  beginDay: 3
+  beginDay: 3 # Frontier: 1<3
   endDay: 31
   beginMonth: November
   endMonth: December
