--- a/Resources/Prototypes/holidays.yml
+++ b/Resources/Prototypes/holidays.yml
@@ -326,7 +326,7 @@
   name: holiday-name-halloween
   beginDay: 27 # Frontier: 31<27
   beginMonth: October
-  endday: 2 # Frontier
+  endDay: 2 # Frontier
   endMonth: November # Frontier
   greet:
     !type:Custom
