Use Erhard's emergency pod sprites, better analyzr

--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/emergency_pod.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/emergency_pod.yml
@@ -34,10 +34,11 @@
       map: ["enum.StorageVisualLayers.Base"]
     - state: window-closed
       map: ["enum.StorageVisualLayers.Door"]
-    - state: window-closed-occupied
-      map: ["occupied"]
     - state: antenna-unlit
       shader: unshaded
+    - state: healthanalyzer-unlit
+      shader: unshaded
+      map: ["healthanalyzer"]
     - state: occupied-unlit
       shader: unshaded
-      map: ["occupied_unlit"]
+      map: ["occupied"]
