--- a/Resources/Prototypes/_NF/Recipes/Lathes/clothing.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/clothing.yml
@@ -1,174 +1,163 @@
-# Jumpsuits
+# Base prototypes
+
 - type: latheRecipe
-  id: ClothingUniformRandomPunkTanktop
+  abstract: true
+  id: NFBaseJumpsuitRecipe
   parent: BaseJumpsuitRecipe
-  result: ClothingUniformRandomPunkTanktop
   category: ClothesNF
   applyMaterialDiscount: false
 
 - type: latheRecipe
+  abstract: true
+  id: NFBaseCoatRecipe
+  parent: BaseCoatRecipe
+  category: ClothesNF
+  applyMaterialDiscount: false
+
+- type: latheRecipe
+  abstract: true
+  id: NFBaseBeltRecipe
+  category: ClothesNF
+  applyMaterialDiscount: false
+  completetime: 2
+  materials:
+    Cloth: 400
+
+- type: latheRecipe
+  abstract: true
+  id: NFBaseBootRecipe # And gloves
+  category: ClothesNF
+  applyMaterialDiscount: false
+  completetime: 3
+  materials:
+    Cloth: 200
+    Durathread: 100
+
+- type: latheRecipe
+  abstract: true
+  id: NFBaseWearableDeviceRecipe
+  category: ClothesNF
+  applyMaterialDiscount: false
+  completetime: 2
+  materials:
+    Steel: 200
+    Plastic: 300
+    Glass: 500
+
+# Recipes
+
+# Jumpsuits
+- type: latheRecipe
+  id: ClothingUniformRandomPunkTanktop
+  parent: NFBaseJumpsuitRecipe
+  result: ClothingUniformRandomPunkTanktop
+
+- type: latheRecipe
   id: ClothingUniformRandomPunkTanktopShorts
-  parent: ClothingUniformRandomPunkTanktop
+  parent: NFBaseJumpsuitRecipe
   result: ClothingUniformRandomPunkTanktopShorts
 
 - type: latheRecipe
   id: ClothingUniformRandomPunkCroptop
-  parent: ClothingUniformRandomPunkTanktop
+  parent: NFBaseJumpsuitRecipe
   result: ClothingUniformRandomPunkCroptop
 
 - type: latheRecipe
   id: ClothingUniformRandomPunkCroptopShorts
-  parent: ClothingUniformRandomPunkTanktop
+  parent: NFBaseJumpsuitRecipe
   result: ClothingUniformRandomPunkCroptopShorts
 
 # Coats
 - type: latheRecipe
   id: ClothingOuterCoatBomberRandomized
-  parent: BaseCoatRecipe
+  parent: NFBaseCoatRecipe
   result: ClothingOuterCoatBomberRandomized
-  category: ClothesNF
-  applyMaterialDiscount: false
 
 - type: latheRecipe
   id: ClothingOuterCoatLettermanRandomized
-  parent: ClothingOuterCoatBomberRandomized
+  parent: NFBaseCoatRecipe
   result: ClothingOuterCoatLettermanRandomized
-  completetime: 3
-  category: ClothesNF
 
 # Belts / Webbings
 - type: latheRecipe
   id: ClothingBeltSalvageWebbing
+  parent: NFBaseBeltRecipe
   result: ClothingBeltSalvageWebbing
-  completetime: 1
-  category: ClothesNF
-  applyMaterialDiscount: false
-  materials:
-    Cloth: 400
 
 - type: latheRecipe
   id: ClothingBeltMercenaryWebbing
-  parent: ClothingBeltSalvageWebbing
+  parent: NFBaseBeltRecipe
   result: ClothingBeltMercenaryWebbing
 
 - type: latheRecipe
   id: ClothingBeltMilitaryWebbing
-  parent: ClothingBeltSalvageWebbing
+  parent: NFBaseBeltRecipe
   result: ClothingBeltMilitaryWebbing
 
 - type: latheRecipe
   id: ClothingBeltBandolier
-  parent: ClothingBeltSalvageWebbing
+  parent: NFBaseBeltRecipe
   result: ClothingBeltBandolier
 
 - type: latheRecipe
   id: ClothingBeltPunkRandomized
-  parent: ClothingBeltSalvageWebbing
+  parent: NFBaseBeltRecipe
   result: ClothingBeltPunkRandomized
 
 # Gloves
 - type: latheRecipe
   id: ClothingHandsMercenaryGlovesCombat
+  parent: NFBaseBootRecipe
   result: ClothingHandsMercenaryGlovesCombat
-  completetime: 3
-  category: ClothesNF
-  materials:
-    Cloth: 200
-    Durathread: 100
 
 - type: latheRecipe
   id: ClothingHandsGlovesCombat
+  parent: NFBaseBootRecipe
   result: ClothingHandsGlovesCombat
-  completetime: 3
-  category: ClothesNF
-  materials:
-    Cloth: 200
-    Durathread: 100
 
 # Boots
 - type: latheRecipe
   id: ClothingShoesBootsMercenary
+  parent: NFBaseBootRecipe
   result: ClothingShoesBootsMercenary
-  completetime: 3
-  category: ClothesNF
-  materials:
-    Cloth: 200
-    Durathread: 100
 
 - type: latheRecipe
   id: ClothingShoesBootsCombat
+  parent: NFBaseBootRecipe
   result: ClothingShoesBootsCombat
-  completetime: 3
-  category: ClothesNF
-  materials:
-    Cloth: 200
-    Durathread: 100
 
 - type: latheRecipe
   id: ClothingShoesBootsJack
+  parent: NFBaseBootRecipe
   result: ClothingShoesBootsJack
-  completetime: 3
-  category: ClothesNF
-  materials:
-    Cloth: 200
-    Durathread: 100
 
 - type: latheRecipe
   id: ClothingShoesBootsPunkRandomized
+  parent: NFBaseBootRecipe
   result: ClothingShoesBootsPunkRandomized
-  completetime: 3
-  category: ClothesNF
-  materials:
-    Cloth: 200
-    Durathread: 100
 
 # Glasses
 - type: latheRecipe
   id: ClothingEyesGlassesMercenary
+  parent: NFBaseWearableDeviceRecipe
   result: ClothingEyesGlassesMercenary
-  category: ClothesNF
-  completetime: 2
-  materials:
-    Steel: 200
-    Plastic: 300
-    Glass: 500
 
 - type: latheRecipe
   id: ClothingEyesGlassesSunglasses
+  parent: NFBaseWearableDeviceRecipe
   result: ClothingEyesGlassesSunglasses
-  category: ClothesNF
-  completetime: 2
-  materials:
-    Steel: 200
-    Plastic: 300
-    Glass: 500
 
 - type: latheRecipe
   id: ClothingEyesHudBountyHunter
+  parent: NFBaseWearableDeviceRecipe
   result: ClothingEyesHudBountyHunter
-  category: ClothesNF
-  completetime: 2
-  materials:
-    Gold: 200
-    Plastic: 300
-    Glass: 500
 
 - type: latheRecipe
   id: ClothingEyesPunkGoggles
+  parent: NFBaseWearableDeviceRecipe
   result: ClothingEyesPunkGoggles
-  category: ClothesNF
-  completetime: 2
-  materials:
-    Steel: 200
-    Plastic: 300
-    Glass: 500
 
 - type: latheRecipe
   id: ClothingEyesPunkInfoShades
+  parent: NFBaseWearableDeviceRecipe
   result: ClothingEyesPunkInfoShades
-  category: ClothesNF
-  completetime: 2
-  materials:
-    Gold: 200
-    Plastic: 300
-    Glass: 500
