--- a/Resources/Prototypes/_NF/Recipes/Lathes/clothing-armor.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/clothing-armor.yml
@@ -23,8 +23,8 @@
 
 - type: latheRecipe
   abstract: true
-  id: NFBaseHelmetRecipe
-  parent: NFBaseMaskArmoredRecipe
+  id: NFBaseMaskArmoredRecipe
+  parent: NFBaseArmorRecipe
   completetime: 2
   materials:
     Durathread: 300
