--- a/Resources/Prototypes/Recipes/Lathes/rehydrateable.yml
+++ b/Resources/Prototypes/Recipes/Lathes/rehydrateable.yml
@@ -5,28 +5,28 @@
   result: MonkeyCube
   completetime: 300 # Frontier 30<300
   materials:
-    Biomass: 16
+    Biomass: 70 # Frontier: 16<70, same as BioGenMonkeyCube recipe
 
 - type: latheRecipe
   id: KoboldCube
   result: KoboldCube
   completetime: 300 # Frontier 30<300
   materials:
-    Biomass: 16
+    Biomass: 70 # Frontier: 16<70, same as BioGenKoboldCube recipe
 
 - type: latheRecipe
   id: CowCube
   result: CowCube
   completetime: 300 # Frontier 30<300
   materials:
-    Biomass: 120
+    Biomass: 350 # Frontier: 120<350, went with 1 pound = 1 biomass, used average weight from wiki
 
 - type: latheRecipe
   id: GoatCube
   result: GoatCube
   completetime: 300 # Frontier 30<300
   materials:
-    Biomass: 35
+    Biomass: 50 # Frontier: 35<50, used average weight from wiki
 
 - type: latheRecipe
   id: MothroachCube
