--- a/Resources/Maps/_NF/Dungeon/virology_lab.yml
+++ b/Resources/Maps/_NF/Dungeon/virology_lab.yml
@@ -3233,7 +3233,7 @@ entities:
     - type: Transform
       pos: 8.500196,21.585516
       parent: 1653
-- proto: Biofabricator
+- proto: Biogenerator
   entities:
   - uid: 1376
     components:
