--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace.yml
@@ -13,6 +13,7 @@
     duration: 1350
     maxDuration: 1560
     reoccurrenceDelay: 480 # 8 hours
+    requireSheriff: true
   - type: BluespaceErrorRule
     gridPaths:
       - /Maps/_NF/Bluespace/cache.yml
@@ -33,6 +34,7 @@
     duration: 1020
     maxDuration: 1350
     reoccurrenceDelay: 480 # 8 hours
+    RequireSheriff: true
   - type: BluespaceErrorRule
     gridPaths:
       - /Maps/_NF/Bluespace/vault.yml
@@ -54,6 +56,7 @@
     duration: 590
     maxDuration: 780
     reoccurrenceDelay: 480 # 8 hours
+    requireSheriff: true
   - type: BluespaceErrorRule
     gridPaths:
       - /Maps/_NF/Bluespace/vaultsmall.yml
