--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace.yml
@@ -13,7 +13,8 @@
     duration: 1350
     maxDuration: 1560
     reoccurrenceDelay: 480 # 8 hours
-    requireSheriff: true
+    requireJobs:
+      Sheriff: 1
   - type: BluespaceErrorRule
     gridPaths:
       - /Maps/_NF/Bluespace/cache.yml
@@ -34,7 +35,8 @@
     duration: 1020
     maxDuration: 1350
     reoccurrenceDelay: 480 # 8 hours
-    RequireSheriff: true
+    requireJobs:
+      Sheriff: 1
   - type: BluespaceErrorRule
     gridPaths:
       - /Maps/_NF/Bluespace/vault.yml
@@ -56,7 +58,8 @@
     duration: 590
     maxDuration: 780
     reoccurrenceDelay: 480 # 8 hours
-    requireSheriff: true
+    requireJobs:
+      Sheriff: 1
   - type: BluespaceErrorRule
     gridPaths:
       - /Maps/_NF/Bluespace/vaultsmall.yml
