--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace.yml
@@ -13,7 +13,7 @@
     duration: 1350
     maxDuration: 1560
     reoccurrenceDelay: 480 # 8 hours
-    requireJobs:
+    requiredJobs:
       Sheriff: 1
   - type: BluespaceErrorRule
     gridPaths:
@@ -35,7 +35,7 @@
     duration: 1020
     maxDuration: 1350
     reoccurrenceDelay: 480 # 8 hours
-    requireJobs:
+    requiredJobs:
       Sheriff: 1
   - type: BluespaceErrorRule
     gridPaths:
@@ -58,7 +58,7 @@
     duration: 590
     maxDuration: 780
     reoccurrenceDelay: 480 # 8 hours
-    requireJobs:
+    requiredJobs:
       Sheriff: 1
   - type: BluespaceErrorRule
     gridPaths:
