--- a/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
@@ -10,7 +10,7 @@
 
 - type: latheRecipe
   id: WeaponRevolverArgenti
-  parent: BaseWeaponRecipe
+  parent: BaseWeaponRecipeLong
   result: WeaponRevolverArgenti
   materials:
     Steel: 1500
