--- a/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
@@ -1,7 +1,7 @@
 # Ranged weapons
 - type: latheRecipe
   id: WeaponLaserPistolNF
-  parent: BaseWeaponRecipe
+  parent: BaseWeaponRecipeLong
   result: WeaponLaserPistolNF
   materials:
     Steel: 1200
