--- a/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
@@ -18,7 +18,7 @@
 
 - type: latheRecipe
   id: WeaponPistolMk58NF
-  parent: BaseWeaponRecipe
+  parent: BaseWeaponRecipeLong
   result: WeaponPistolMk58
   materials:
     Steel: 1000
