--- a/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
@@ -124,7 +124,7 @@
 
 - type: latheRecipe
   id: WeaponCrusher
-  parent: BaseWeaponRecipe
+  parent: BaseWeaponRecipeLong
   result: WeaponCrusher
   materials:
     Steel: 1000
