--- a/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
@@ -133,7 +133,7 @@
 
 - type: latheRecipe
   id: WeaponCrusherDagger
-  parent: BaseWeaponRecipe
+  parent: BaseWeaponRecipeLong
   result: WeaponCrusherDagger
   materials:
     Steel: 500
