--- a/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
@@ -20,8 +20,6 @@
   components:
   - type: ResearchDisk
     points: 5000
-  - type: StaticPrice
-    price: 1500 # Frontier - To be fair, its worth half a tech disk, but we still require tech to print it so its lower.
 
 - type: entity
   parent: ResearchDisk
@@ -31,8 +29,6 @@
   components:
   - type: ResearchDisk
     points: 10000
-  - type: StaticPrice
-    price: 3000 # Frontier - To be fair, its worth a tech disk, but we still require tech to print it so its lower.
 
 - type: entity
   parent: ResearchDisk
@@ -63,7 +59,9 @@
   - type: TechnologyDisk
     tierWeightPrototype: TechDiskTierWeights # Frontier
   - type: StaticPrice
-    price: 5000 # Frontier - Rebalance
+    price: 100
+  - type: StealTarget
+    stealGroup: TechnologyDisk
 
 - type: entity
   parent: TechnologyDisk
@@ -71,4 +69,4 @@
   suffix: rare.
   components:
   - type: TechnologyDisk
-    tierWeightPrototype: RareTechDiskTierWeights # Frontier
+    tierWeightPrototype: RareTechDiskTierWeights
