--- a/Resources/Maps/_NF/Shuttles/Expedition/ambition.yml
+++ b/Resources/Maps/_NF/Shuttles/Expedition/ambition.yml
@@ -1246,7 +1246,7 @@ entities:
             2: 17
             1: 29696
           1,-3:
-            1: 18295
+            1: 17783
           1,-2:
             1: 44798
           1,-5:
@@ -2326,6 +2326,18 @@ entities:
       rot: 3.141592653589793 rad
       pos: 8.5,33.5
       parent: 1
+  - uid: 2089
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -1.5,34.5
+      parent: 1
+  - uid: 2098
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 2.5,34.5
+      parent: 1
 - proto: AtmosFixBlockerMarker
   entities:
   - uid: 35
@@ -3399,7 +3411,6 @@ entities:
       parent: 1
     - type: Physics
       canCollide: False
-      bodyType: Static
     - type: Fixtures
       fixtures: {}
 - proto: BenchSofaCorpLeft
@@ -3410,8 +3421,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 3.5,-11.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: BenchSofaCorpMiddle
   entities:
   - uid: 649
@@ -3420,8 +3429,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: 4.5,-12.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: BenchSofaCorpRight
   entities:
   - uid: 650
@@ -3430,8 +3437,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: 5.5,-12.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: BlastDoor
   entities:
   - uid: 9
@@ -3526,6 +3531,20 @@ entities:
     components:
     - type: Transform
       pos: 1.5,-15.5
+      parent: 1
+- proto: BlastDoorExterior1
+  entities:
+  - uid: 2104
+    components:
+    - type: Transform
+      pos: -1.5,34.5
+      parent: 1
+- proto: BlastDoorExterior2
+  entities:
+  - uid: 2134
+    components:
+    - type: Transform
+      pos: 2.5,34.5
       parent: 1
 - proto: BookshelfFilled
   entities:
@@ -6845,12 +6864,29 @@ entities:
       parent: 1
 - proto: ClosetWallEmergencyFilledRandom
   entities:
-  - uid: 2358
+  - uid: 569
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -2.5,33.5
+      pos: -3.5,33.5
       parent: 1
+    - type: EntityStorage
+      air:
+        volume: 200
+        immutable: False
+        temperature: 293.14923
+        moles:
+        - 1.7459903
+        - 6.568249
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
   - uid: 2359
     components:
     - type: Transform
@@ -6865,12 +6901,29 @@ entities:
       parent: 1
 - proto: ClosetWallFireFilledRandom
   entities:
-  - uid: 2350
+  - uid: 570
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 3.5,33.5
+      pos: 4.5,33.5
       parent: 1
+    - type: EntityStorage
+      air:
+        volume: 200
+        immutable: False
+        temperature: 293.14923
+        moles:
+        - 1.7459903
+        - 6.568249
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
 - proto: ClothingHandsGlovesCombat
   entities:
   - uid: 2523
@@ -7753,20 +7806,6 @@ entities:
     - type: Transform
       pos: 2.5,-4.5
       parent: 1
-    - type: ContainerContainer
-      containers:
-        machine_board: !type:Container
-          showEnts: False
-          occludes: True
-          ents: []
-        machine_parts: !type:Container
-          showEnts: False
-          occludes: True
-          ents: []
-        blueprint: !type:Container
-          showEnts: False
-          occludes: True
-          ents: []
 - proto: ExtinguisherCabinetFilled
   entities:
   - uid: 83
@@ -12614,16 +12653,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 3.5,32.5
       parent: 1
-  - uid: 569
-    components:
-    - type: Transform
-      pos: -1.5,34.5
-      parent: 1
-  - uid: 570
-    components:
-    - type: Transform
-      pos: 2.5,34.5
-      parent: 1
   - uid: 1943
     components:
     - type: Transform
@@ -14232,6 +14261,22 @@ entities:
         - Pressed: Toggle
         1893:
         - Pressed: Toggle
+- proto: SignalButtonExt1
+  entities:
+  - uid: 404
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -2.5,33.5
+      parent: 1
+- proto: SignalButtonExt2
+  entities:
+  - uid: 170
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 3.5,33.5
+      parent: 1
 - proto: SignAtmos
   entities:
   - uid: 2324
