--- a/Resources/Prototypes/_NF/Events/nf_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events.yml
@@ -63,12 +63,29 @@
   - type: StationEvent
     weight: 8 # Fairly common.
     duration: 35
-    earliestStart: 30
+    earliestStart: 50
     minimumPlayers: 20
     reoccurrenceDelay: 50
   - type: RandomFaxRule
     minFaxes: 1
     maxFaxes: 2
+    name: deaddrop-faxed-hint-name
+    prototypeId: PaperDeadDropFax
+    content: deaddrop-faxed-hint-content # Default contents, will be edited.
+    preFaxActions:
+    - !type:GetRandomDeadDropAction
+
+- type: entity
+  id: SmugglingFaxBig
+  parent: BaseStationEventShortDelay
+  components:
+  - type: StationEvent
+    weight: 100 # Fairly common.
+    minimumPlayers: 10
+    duration: 35
+  - type: RandomFaxRule
+    minFaxes: 3
+    maxFaxes: 4
     name: deaddrop-faxed-hint-name
     prototypeId: PaperDeadDropFax
     content: deaddrop-faxed-hint-content # Default contents, will be edited.
